Added Event Schedule, and speaker section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
             </article>
         </section>
 
+        <section id = "schedule">
+            <article>
+                <h2>Event Schedule</h2>
+                <ul>
+                    <li>9:00 AM - Opening Ceremony</li>
+                    <li>10:00 AM - Team Formation</li>
+                    <li>11:00 AM - Coding Begins</li>
+                    <li>8:00 PM - Dinner Break</li>
+                    <li>9:00 PM - Coding Resumes</li>
+                    <li>9:00 AM (next day) - Submission Deadline</li>
+                    <li>10:00 AM - Presentations</li>
+                    <li>12:00 PM - Awards Ceremony</li>
+                </ul>
+            </article>
+
+        <section id = "speakers">
+            <div class = "speaker-card">
+                <img src = "https://media.licdn.com/dms/image/v2/D5603AQGmKPDq-l4vgw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1729291548135?e=1772064000&v=beta&t=NPYigGC3uExvMAk9lhnYbk72mLBh0Wwuch1nUL1lehE" alt = "Speaker">
+                <h3>Aidan Jaramillo</h3>
+                <p>Sophomore Software Engineering Student</p>
+            </div>
+        </section>
+
 
 
 
