--- a/index.html
+++ b/index.html
@@ -57,6 +57,31 @@
             </div>
         </section>
 
+        <section id = "register">
+            <h2>Register for this year's Hackathon 2026!</h2>
+
+            <form>
+                <label for = "name">Full Name:</label>
+                <input type = "text" id = "name" name = "name" required>
+                
+                <label for = "email">Email Address:</label>
+                <input type = "email" id = "email" name = "email" required>
+                
+                <label for = "college">College:</label>
+                <input type = "text" id = "college" name = "college" required>
+
+                <label for = "experience">Programming Experience Level:</label>
+                <select id = "experience" name = "experience" required>
+                    <option value = "beginner">Beginner</option>
+                    <option value = "intermediate">Intermediate</option>
+                    <option value = "advanced">Advanced</option>
+                </select>
+
+                <button type = "submit">Submit</button>
+
+            </form>
+        </section>
+
 
 
 
