Added an extra registration label

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                 <input type = "text" id = "college" name = "college" required>
                 <br><br>
 
+                <label for = "dob">Date of Birth:</label>
+                <input type = "date" id = "dob" name = "dob" required>
+                <br><br>
+
                 <label for = "experience">Programming Experience Level:</label>
                 <select id = "experience" name = "experience" required>
                     <option value = "beginner">Beginner</option>
