--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href = "#schedule">Schedule</a></li>
                 <li><a href = "#speakers">Speakers</a></li>
                 <li><a href = "#register">Register</a></li>
+                <li><a href = "#contact">Contact</a></li>
             </ul>
         </nav>
 
