added footer sections

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
             </form>
         </section>
 
+        <footer id = "contact">
+            <h2>Contact Us</h2>
+            <p>Email: hackathon2026@example.com</p>
+            <p>Phone: (123) 456-7890</p>
+        </footer>
+
 
 
 
