made the email a link instead

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <footer id = "contact">
             <h2>Contact Us</h2>
-            <p>Email: hackathon2026@example.com</p>
+            <p>Email: <a href = "mailto:hackathon2026@example.com">hackathon2026@example.com</a></p>
             <p>Phone: (123) 456-7890</p>
         </footer>
 
